[package]
name = "revc"
version = "0.2.0"
authors = ["Rain Liu <yuliu@outlook.com>"]
edition = "2018"
description = "Rust Essential Video Coding (MPEG-5 EVC)"
license = "MIT"
documentation = "https://github.com/revcx/revc"
homepage = "https://github.com/revcx/revc"
repository = "https://github.com/revcx/revc"

[features]
binaries = ["clap", "y4m"]
default = ["binaries"]
profile = ["rust_hawktracer"]
trace = []
trace_bin = ["trace"]
trace_coef = ["trace"]
trace_resi = ["trace"]
trace_pred = ["trace"]
trace_reco = ["trace"]
trace_dbf = ["trace"]
trace_cu = ["trace"]
trace_me = ["trace"]

[dependencies]
log = "0.4"
num-traits = "0.2"
num-derive = "0.3"
lazy_static = "1.4.0"
thiserror = "1.0"
cfg-if = "0.1"
noop_proc_macro = "0.3.0"
clap = { version = "2", optional = true, default-features = false }
y4m = { version = "0.6", optional = true }

[dependencies.rust_hawktracer]
version = "0.7.0"
features = ["profiling_enabled"]
optional = true

[[bin]]
name = "revcd"
path = "src/bin/revcd.rs"
required-features = ["binaries"]

[[bin]]
name = "revce"
path = "src/bin/revce.rs"
required-features = ["binaries"]

[profile.dev]
opt-level = 0
